--- a/todo/templates/todo/loginuser.html
+++ b/todo/templates/todo/loginuser.html
@@ -17,7 +17,9 @@
       <label for="password" class="form-label">Пароль</label>
       <input type="password" class="form-control" name="password" id="password">
     </div>
-    <button type="submit" class="btn btn-primary btn-lg" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 6.0rem; --bs-btn-font-size: 1.0rem;">Вхід</button>
-  </  form>
+    <div class="d-flex justify-content-center">
+      <button type="submit" class="btn btn-primary">Вхід</button>
+    </div
+  </form>
 </div>
 {% endblock %}
