--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -20,8 +20,9 @@
     <label for="password" class="form-label">Повторіть пароль будь-ласка</label>
     <input type="password" class="form-control" name="password2" id="password2">
   </div>
-
-  <button type="submit" class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: 6.0rem; --bs-btn-font-size: 1.0rem;">Реєстрація</<button>
+  <div class="d-flex justify-content-center">
+    <button type="submit" class="btn btn-primary">Реєстрація</<button>
+  </div>
   </form>
 </div>
 {% endblock %}
