--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,47 +9,58 @@
     <link rel="icon" type="image/png" href="{% static "todo/logo.png" %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "todo/custom1.css" %}">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@600&family=Noto+Sans+JP:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <title>Записник</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #800080;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #ffff00;">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">
-          <img src="{% static "todo/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Kolya's Logo">
-          <span style="color: white;">Записник</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          {% if user.is_authenticated %}
+            <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="{% static "todo/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Kolya's Logo">
+            <span style="color: black;"><b>Записник</b></span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        {% if user.is_authenticated %}
 
-          <div class="navbar-nav">
-            <b><a class="nav-link active" aria-current="page" href="{% url 'createtodos' %}">Створити</a></b>
-            <b><a class="nav-link" href="{% url 'currenttodos' %}">Поточні</a></b>
-            <b><a class="nav-link" href="{% url 'completedtodos' %}">Завершені</a></b>
-          </div>
-          <form class="navbar-nav navbar-collapse d-flex justify-content-end" action="{% url 'logoutuser' %}" method="POST">
-            {% csrf_token %}
-            <b><button class="btn btn-primary" type="submit">Вихід</button></b>
-          </form>
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <b><a class="nav-link" href="{% url 'currenttodos' %}">Поточні</a></b>
+              </li>
+              <li class="nav-item">
+                <b><a class="nav-link" aria-current="page" href="{% url 'completedtodos' %}">Завершені</a></b>
+              </li>
+            </ul>
+            <b><a class="nav-link" href="#" onclick="$('#logout').click()">Вихід</a></b>
+              <form style='display: none;' action="{% url 'logoutuser' %}" method="POST">
+                {% csrf_token %}
+                <b><button id="logout" class="btn btn-primary" type="submit">Вихід</button></b>
+              </form>
 
-          {% else %}
+        {% else %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <b><a class="nav-link" href="{% url 'signupuser' %}">Зареєструватися</a></b>
+            </li>
+            <li class="nav-item">
+              <b><a class="nav-link" href="{% url 'loginuser' %}">Вхід</a></b>
+            </li>
+          </ul>
+        {% endif %}
 
-          <div class="collapse navbar-collapse d-flex justify-content-end">
-            <div class="d-grid gap-2 d-md-block">
-              <b><a class="btn btn-primary" href="{% url 'signupuser' %}">Зареєструватися</a></b>
-              <b><a class="btn btn-primary" href="{% url 'loginuser' %}">Вхід</a></b>
-            </div>
-          </div>
-          {% endif %}
 
-        </div>
       </div>
     </nav>
-    <div class="container" style="margin-top: 10%">
+    <div class="container" style="padding-top: 5%; height: 90vh;">
       {% block content %}{% endblock %}
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
