--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,7 +1,15 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
+<div class="d-flex flex-column justify-content-start align-items-center" style="height: 80vh;">
+  <div>
+    <h1 class="text-center">Було б непогано записати щось аби не забути:)</h1>
+  </div>
+  <br>
+  <div>
+    <b><a class="btn btn-primary" href="{% url 'createtodos' %}">Додати нагадування</a></b>
+  </div>
+</div>
 
-Home
 
 {% endblock %}
