remove old staff

--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #ffff00;">
       <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static "todo/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Kolya's Logo">
+            <img src="{% static "todo/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Kolya's Logo">
             <span style="color: black;"><b>Записник</b></span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
