--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="d-flex flex-column justify-content-start align-items-center" style="height: 80vh;">
   <div>
-    <h1 class="text-center">Було б непогано записати щось аби не забути:)</h1>
+    <h1 class="text-center">Було б непогано записати щось аби не забути &#128521</h1>
   </div>
   <br>
   <div>
