--- a/todo/static/todo/custom1.css
+++ b/todo/static/todo/custom1.css
@@ -32,12 +32,6 @@ body {
   color: black;
 }
 
-
-@media (min-width: 992px) {
-    #hometext {
-        font-size: 4rem;
-    }
-    #blogdetailtitle {
-        font-size: 5rem;
-    }
+.completed_todo {
+  display: inline-block;
 }
