--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -20,23 +20,21 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #ffff00;">
       <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="{% static "todo/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Kolya's Logo">
+            <img src="{% static "todo/logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Todo's logo">
             <span style="color: black;"><b>Записник</b></span>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+
         {% if user.is_authenticated %}
 
             <ul class="navbar-nav me-auto">
-              <li class="nav-item">
+              <li class="nav-item d-flex justify-content-center">
                 <b><a class="nav-link" href="{% url 'currenttodos' %}">Поточні</a></b>
               </li>
-              <li class="nav-item">
+              <li class="nav-item d-flex justify-content-center">
                 <b><a class="nav-link" aria-current="page" href="{% url 'completedtodos' %}">Завершені</a></b>
               </li>
             </ul>
-            <b><a class="nav-link" href="#" onclick="$('#logout').click()">Вихід</a></b>
+            <b><a class="nav-link d-flex justify-content-center" href="#" onclick="$('#logout').click()">Вихід</a></b>
               <form style='display: none;' action="{% url 'logoutuser' %}" method="POST">
                 {% csrf_token %}
                 <b><button id="logout" class="btn btn-primary" type="submit">Вихід</button></b>
@@ -44,10 +42,10 @@
 
         {% else %}
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <b><a class="nav-link" href="{% url 'signupuser' %}">Зареєструватися</a></b>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <b><a class="nav-link" href="{% url 'loginuser' %}">Вхід</a></b>
             </li>
           </ul>
