--- a/todo/static/todo/custom1.css
+++ b/todo/static/todo/custom1.css
@@ -32,6 +32,8 @@ body {
   color: black;
 }
 
-.completed_todo {
-  display: inline-block;
+@media (max-width: 992px) {
+  .justify-content-between {
+    flex-direction: column;
+  }
 }
